--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lucide-react": "^0.479.0",
     "motion": "^12.5.0",
     "next": "^15.0.1",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
