--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "rehype": "^13.0.2",
-    "rehype-add-classes": "^1.0.0",
+    "rehype-class-names": "^2.0.0",
     "rehype-highlight": "^7.0.2",
     "rehype-highlight-code-lines": "^1.1.3",
     "rehype-parse": "^9.0.1",
