--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@react-spring/three": "^9.7.5",
+    "@react-three/fiber": "^9.1.0",
+    "@shadergradient/react": "^2.0.25",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
@@ -47,6 +50,7 @@
     "remark-html": "^16.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.175.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
@@ -54,6 +58,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.175.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^8.57.0",
