--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@react-spring/three": "^9.7.5",
     "@react-three/fiber": "^9.1.0",
     "@shadergradient/react": "^2.0.25",
