updating page content, enhancing seo config and adding 404 page

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "rough-notation": "^0.5.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.175.0",
