Update branding and SEO elements across multiple files, including config, manifest, and HomePage component; enhance social icons and remove unused components.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Viktor Čierňava",
   "short_name": "withviktor",
-  "description": "Personal website of Viktor Čierňava",
+  "description": "Viktor Čierňava - Web Designer Ostrava, tvořím úspěšné webové stránky",
   "start_url": "/",
   "icons":[
     {
